RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/Resource_Optimizer_Connector__mdt.object-meta.xml
<CustomObject>
    <label>Resource Optimizer Connector</label>
    <pluralLabel>Resource Optimizer Connector</pluralLabel>
</CustomObject>