RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/fields/Connect_object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Connect_object_API_Name__c</fullName>
    <description>Enter the API name of the object you want to integrate with resource optimizer</description>
    <label>Connect object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>