RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/fields/Description_field_API_name__c.field-meta.xml
<CustomField>
    <fullName>Description_field_API_name__c</fullName>
    <label>Description field API name</label>
    <type>TextArea</type>
</CustomField>