RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/fields/End_date_time_field_API_name__c.field-meta.xml
<CustomField>
    <fullName>End_date_time_field_API_name__c</fullName>
    <label>End date time field API name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>