RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/fields/Filter_field_API_names__c.field-meta.xml
<CustomField>
    <fullName>Filter_field_API_names__c</fullName>
    <description>Enter the name of the API fields semicolon separated to filter the records in calendar view</description>
    <label>Filter field API names</label>
    <type>TextArea</type>
</CustomField>