RSOP/force-app/main/default/objects/Resource_Optimizer_Connector__mdt/fields/Object_color_code__c.field-meta.xml
<CustomField>
    <fullName>Object_color_code__c</fullName>
    <label>Object color code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>